@@ -14,7 +14,7 @@ import org.elasticsearch.cluster.ClusterName;
 import org.elasticsearch.cluster.ClusterState;
 import org.elasticsearch.cluster.ClusterStateTaskExecutor;
 import org.elasticsearch.cluster.ESAllocationTestCase;
-import org.elasticsearch.cluster.action.shard.ShardStateAction.FailedShardEntry;
+import org.elasticsearch.cluster.action.shard.ShardStateAction.FailedShardUpdateTask;
 import org.elasticsearch.cluster.metadata.IndexMetadata;
 import org.elasticsearch.cluster.metadata.Metadata;
 import org.elasticsearch.cluster.node.DiscoveryNodes;
@@ -85,32 +85,32 @@ public class ShardFailedClusterStateTaskExecutorTests extends ESAllocationTestCa
     }
 
     public void testEmptyTaskListProducesSameClusterState() throws Exception {
-        List<ShardStateAction.FailedShardEntry> tasks = Collections.emptyList();
-        ClusterStateTaskExecutor.ClusterTasksResult<ShardStateAction.FailedShardEntry> result = executor.execute(clusterState, tasks);
+        List<FailedShardUpdateTask> tasks = Collections.emptyList();
+        ClusterStateTaskExecutor.ClusterTasksResult<FailedShardUpdateTask> result = executor.execute(clusterState, tasks);
         assertTasksSuccessful(tasks, result, clusterState, false);
     }
 
     public void testDuplicateFailuresAreOkay() throws Exception {
         String reason = "test duplicate failures are okay";
         ClusterState currentState = createClusterStateWithStartedShards(reason);
-        List<FailedShardEntry> tasks = createExistingShards(currentState, reason);
-        ClusterStateTaskExecutor.ClusterTasksResult<FailedShardEntry> result = executor.execute(currentState, tasks);
+        List<FailedShardUpdateTask> tasks = createExistingShards(currentState, reason);
+        ClusterStateTaskExecutor.ClusterTasksResult<FailedShardUpdateTask> result = executor.execute(currentState, tasks);
         assertTasksSuccessful(tasks, result, clusterState, true);
     }
 
     public void testNonExistentShardsAreMarkedAsSuccessful() throws Exception {
         String reason = "test non existent shards are marked as successful";
         ClusterState currentState = createClusterStateWithStartedShards(reason);
-        List<FailedShardEntry> tasks = createNonExistentShards(currentState, reason);
-        ClusterStateTaskExecutor.ClusterTasksResult<FailedShardEntry> result = executor.execute(clusterState, tasks);
+        List<FailedShardUpdateTask> tasks = createNonExistentShards(currentState, reason);
+        ClusterStateTaskExecutor.ClusterTasksResult<FailedShardUpdateTask> result = executor.execute(clusterState, tasks);
         assertTasksSuccessful(tasks, result, clusterState, false);
     }
 
     public void testTriviallySuccessfulTasksBatchedWithFailingTasks() throws Exception {
         String reason = "test trivially successful tasks batched with failing tasks";
         ClusterState currentState = createClusterStateWithStartedShards(reason);
-        List<FailedShardEntry> failingTasks = createExistingShards(currentState, reason);
-        List<FailedShardEntry> nonExistentTasks = createNonExistentShards(currentState, reason);
+        List<FailedShardUpdateTask> failingTasks = createExistingShards(currentState, reason);
+        List<FailedShardUpdateTask> nonExistentTasks = createNonExistentShards(currentState, reason);
         ShardStateAction.ShardFailedClusterStateTaskExecutor failingExecutor = new ShardStateAction.ShardFailedClusterStateTaskExecutor(
             allocationService,
             null
@@ -120,12 +120,12 @@ public class ShardFailedClusterStateTaskExecutorTests extends ESAllocationTestCa
                 throw new RuntimeException("simulated applyFailedShards failure");
             }
         };
-        List<FailedShardEntry> tasks = new ArrayList<>();
+        List<FailedShardUpdateTask> tasks = new ArrayList<>();
         tasks.addAll(failingTasks);
         tasks.addAll(nonExistentTasks);
-        ClusterStateTaskExecutor.ClusterTasksResult<FailedShardEntry> result = failingExecutor.execute(currentState, tasks);
-        List<Tuple<FailedShardEntry, ClusterStateTaskExecutor.TaskResult>> taskResultList = new ArrayList<>();
-        for (FailedShardEntry failingTask : failingTasks) {
+        ClusterStateTaskExecutor.ClusterTasksResult<FailedShardUpdateTask> result = failingExecutor.execute(currentState, tasks);
+        List<Tuple<FailedShardUpdateTask, ClusterStateTaskExecutor.TaskResult>> taskResultList = new ArrayList<>();
+        for (FailedShardUpdateTask failingTask : failingTasks) {
             taskResultList.add(
                 Tuple.tuple(
                     failingTask,
@@ -133,7 +133,7 @@ public class ShardFailedClusterStateTaskExecutorTests extends ESAllocationTestCa
                 )
             );
         }
-        for (FailedShardEntry nonExistentTask : nonExistentTasks) {
+        for (FailedShardUpdateTask nonExistentTask : nonExistentTasks) {
             taskResultList.add(Tuple.tuple(nonExistentTask, ClusterStateTaskExecutor.TaskResult.success()));
         }
         assertTaskResults(taskResultList, result, currentState, false);
@@ -142,22 +142,23 @@ public class ShardFailedClusterStateTaskExecutorTests extends ESAllocationTestCa
     public void testIllegalShardFailureRequests() throws Exception {
         String reason = "test illegal shard failure requests";
         ClusterState currentState = createClusterStateWithStartedShards(reason);
-        List<ShardStateAction.FailedShardEntry> failingTasks = createExistingShards(currentState, reason);
-        List<ShardStateAction.FailedShardEntry> tasks = new ArrayList<>();
-        for (ShardStateAction.FailedShardEntry failingTask : failingTasks) {
+        List<FailedShardUpdateTask> failingTasks = createExistingShards(currentState, reason);
+        List<FailedShardUpdateTask> tasks = new ArrayList<>();
+        for (FailedShardUpdateTask failingTask : failingTasks) {
             long primaryTerm = currentState.metadata().index(failingTask.shardId.getIndex()).primaryTerm(failingTask.shardId.id());
             tasks.add(
-                new FailedShardEntry(
+                new FailedShardUpdateTask(
                     failingTask.shardId,
                     failingTask.allocationId,
                     randomIntBetween(1, (int) primaryTerm - 1),
                     failingTask.message,
                     failingTask.failure,
-                    randomBoolean()
+                    randomBoolean(),
+                    null
                 )
             );
         }
-        List<Tuple<FailedShardEntry, ClusterStateTaskExecutor.TaskResult>> taskResultList = tasks.stream()
+        List<Tuple<FailedShardUpdateTask, ClusterStateTaskExecutor.TaskResult>> taskResultList = tasks.stream()
             .map(
                 task -> Tuple.tuple(
                     task,
@@ -174,7 +175,7 @@ public class ShardFailedClusterStateTaskExecutorTests extends ESAllocationTestCa
                 )
             )
             .collect(Collectors.toList());
-        ClusterStateTaskExecutor.ClusterTasksResult<FailedShardEntry> result = executor.execute(currentState, tasks);
+        ClusterStateTaskExecutor.ClusterTasksResult<FailedShardUpdateTask> result = executor.execute(currentState, tasks);
         assertTaskResults(taskResultList, result, currentState, false);
     }
 
@@ -186,29 +187,31 @@ public class ShardFailedClusterStateTaskExecutorTests extends ESAllocationTestCa
         long primaryTerm = clusterState.metadata().index(INDEX).primaryTerm(0);
         final Set<String> oldInSync = clusterState.metadata().index(INDEX).inSyncAllocationIds(0);
         {
-            ShardStateAction.FailedShardEntry failShardOnly = new ShardStateAction.FailedShardEntry(
+            FailedShardUpdateTask failShardOnly = new FailedShardUpdateTask(
                 shardRoutingTable.shardId(),
                 randomFrom(oldInSync),
                 primaryTerm,
                 "dummy",
                 null,
-                false
+                false,
+                null
             );
-            ClusterState appliedState = executor.execute(clusterState, Collections.singletonList(failShardOnly)).resultingState;
+            ClusterState appliedState = executor.execute(clusterState, List.of(failShardOnly)).resultingState;
             Set<String> newInSync = appliedState.metadata().index(INDEX).inSyncAllocationIds(0);
             assertThat(newInSync, equalTo(oldInSync));
         }
         {
             final String failedAllocationId = randomFrom(oldInSync);
-            ShardStateAction.FailedShardEntry failAndMarkAsStale = new ShardStateAction.FailedShardEntry(
+            FailedShardUpdateTask failAndMarkAsStale = new FailedShardUpdateTask(
                 shardRoutingTable.shardId(),
                 failedAllocationId,
                 primaryTerm,
                 "dummy",
                 null,
-                true
+                true,
+                null
             );
-            ClusterState appliedState = executor.execute(clusterState, Collections.singletonList(failAndMarkAsStale)).resultingState;
+            ClusterState appliedState = executor.execute(clusterState, List.of(failAndMarkAsStale)).resultingState;
             Set<String> newInSync = appliedState.metadata().index(INDEX).inSyncAllocationIds(0);
             assertThat(Sets.difference(oldInSync, newInSync), contains(failedAllocationId));
         }
@@ -224,7 +227,7 @@ public class ShardFailedClusterStateTaskExecutorTests extends ESAllocationTestCa
         return ESAllocationTestCase.startInitializingShardsAndReroute(allocationService, stateAfterReroute);
     }
 
-    private List<ShardStateAction.FailedShardEntry> createExistingShards(ClusterState currentState, String reason) {
+    private List<FailedShardUpdateTask> createExistingShards(ClusterState currentState, String reason) {
         List<ShardRouting> shards = new ArrayList<>();
         GroupShardsIterator<ShardIterator> shardGroups = currentState.routingTable().allAssignedShardsGrouped(new String[] { INDEX }, true);
         for (ShardIterator shardIt : shardGroups) {
@@ -242,7 +245,7 @@ public class ShardFailedClusterStateTaskExecutorTests extends ESAllocationTestCa
         return toTasks(currentState, shardsToFail, indexUUID, reason);
     }
 
-    private List<ShardStateAction.FailedShardEntry> createNonExistentShards(ClusterState currentState, String reason) {
+    private List<FailedShardUpdateTask> createNonExistentShards(ClusterState currentState, String reason) {
         // add shards from a non-existent index
         String nonExistentIndexUUID = "non-existent";
         Index index = new Index("non-existent", nonExistentIndexUUID);
@@ -253,31 +256,33 @@ public class ShardFailedClusterStateTaskExecutorTests extends ESAllocationTestCa
             nonExistentShards.add(nonExistentShardRouting(index, nodeIds, false));
         }
 
-        List<ShardStateAction.FailedShardEntry> existingShards = createExistingShards(currentState, reason);
-        List<ShardStateAction.FailedShardEntry> shardsWithMismatchedAllocationIds = new ArrayList<>();
-        for (ShardStateAction.FailedShardEntry existingShard : existingShards) {
+        List<FailedShardUpdateTask> existingShards = createExistingShards(currentState, reason);
+        List<FailedShardUpdateTask> shardsWithMismatchedAllocationIds = new ArrayList<>();
+        for (FailedShardUpdateTask existingShard : existingShards) {
             shardsWithMismatchedAllocationIds.add(
-                new ShardStateAction.FailedShardEntry(
+                new FailedShardUpdateTask(
                     existingShard.shardId,
                     UUIDs.randomBase64UUID(),
                     0L,
                     existingShard.message,
                     existingShard.failure,
-                    randomBoolean()
+                    randomBoolean(),
+                    null
                 )
             );
         }
 
-        List<ShardStateAction.FailedShardEntry> tasks = new ArrayList<>();
+        List<FailedShardUpdateTask> tasks = new ArrayList<>();
         nonExistentShards.forEach(
             shard -> tasks.add(
-                new ShardStateAction.FailedShardEntry(
+                new FailedShardUpdateTask(
                     shard.shardId(),
                     shard.allocationId().getId(),
                     0L,
                     reason,
                     new CorruptIndexException("simulated", nonExistentIndexUUID),
-                    randomBoolean()
+                    randomBoolean(),
+                    null
                 )
             )
         );
@@ -297,27 +302,27 @@ public class ShardFailedClusterStateTaskExecutorTests extends ESAllocationTestCa
     }
 
     private static void assertTasksSuccessful(
-        List<ShardStateAction.FailedShardEntry> tasks,
-        ClusterStateTaskExecutor.ClusterTasksResult<ShardStateAction.FailedShardEntry> result,
+        List<FailedShardUpdateTask> tasks,
+        ClusterStateTaskExecutor.ClusterTasksResult<FailedShardUpdateTask> result,
         ClusterState clusterState,
         boolean clusterStateChanged
     ) {
-        List<Tuple<FailedShardEntry, ClusterStateTaskExecutor.TaskResult>> taskResultList = tasks.stream()
+        List<Tuple<FailedShardUpdateTask, ClusterStateTaskExecutor.TaskResult>> taskResultList = tasks.stream()
             .map(t -> Tuple.tuple(t, ClusterStateTaskExecutor.TaskResult.success()))
             .collect(Collectors.toList());
         assertTaskResults(taskResultList, result, clusterState, clusterStateChanged);
     }
 
     private static void assertTaskResults(
-        List<Tuple<ShardStateAction.FailedShardEntry, ClusterStateTaskExecutor.TaskResult>> taskResultList,
-        ClusterStateTaskExecutor.ClusterTasksResult<ShardStateAction.FailedShardEntry> result,
+        List<Tuple<FailedShardUpdateTask, ClusterStateTaskExecutor.TaskResult>> taskResultList,
+        ClusterStateTaskExecutor.ClusterTasksResult<FailedShardUpdateTask> result,
         ClusterState clusterState,
         boolean clusterStateChanged
     ) {
         // there should be as many task results as tasks
         assertEquals(taskResultList.size(), result.executionResults.size());
 
-        for (Tuple<FailedShardEntry, ClusterStateTaskExecutor.TaskResult> entry : taskResultList) {
+        for (Tuple<FailedShardUpdateTask, ClusterStateTaskExecutor.TaskResult> entry : taskResultList) {
             // every task should have a corresponding task result
             assertTrue(result.executionResults.containsKey(entry.v1()));
 
@@ -326,7 +331,7 @@ public class ShardFailedClusterStateTaskExecutorTests extends ESAllocationTestCa
         }
 
         List<ShardRouting> shards = clusterState.getRoutingTable().allShards();
-        for (Tuple<FailedShardEntry, ClusterStateTaskExecutor.TaskResult> entry : taskResultList) {
+        for (Tuple<FailedShardUpdateTask, ClusterStateTaskExecutor.TaskResult> entry : taskResultList) {
             if (entry.v2().isSuccess()) {
                 // the shard was successfully failed and so should not be in the routing table
                 for (ShardRouting shard : shards) {
@@ -353,7 +358,7 @@ public class ShardFailedClusterStateTaskExecutorTests extends ESAllocationTestCa
         }
     }
 
-    private static List<ShardStateAction.FailedShardEntry> toTasks(
+    private static List<FailedShardUpdateTask> toTasks(
         ClusterState currentState,
         List<ShardRouting> shards,
         String indexUUID,
@@ -361,13 +366,14 @@ public class ShardFailedClusterStateTaskExecutorTests extends ESAllocationTestCa
     ) {
         return shards.stream()
             .map(
-                shard -> new ShardStateAction.FailedShardEntry(
+                shard -> new FailedShardUpdateTask(
                     shard.shardId(),
                     shard.allocationId().getId(),
                     randomBoolean() ? 0L : currentState.metadata().getIndexSafe(shard.index()).primaryTerm(shard.id()),
                     message,
                     new CorruptIndexException("simulated", indexUUID),
-                    randomBoolean()
+                    randomBoolean(),
+                    null
                 )
             )
             .collect(Collectors.toList());
