@@ -12,7 +12,7 @@ import org.elasticsearch.Version;
 import org.elasticsearch.cluster.ClusterState;
 import org.elasticsearch.cluster.ESAllocationTestCase;
 import org.elasticsearch.cluster.action.shard.ShardStateAction;
-import org.elasticsearch.cluster.action.shard.ShardStateAction.FailedShardEntry;
+import org.elasticsearch.cluster.action.shard.ShardStateAction.FailedShardUpdateTask;
 import org.elasticsearch.cluster.metadata.IndexMetadata;
 import org.elasticsearch.cluster.metadata.Metadata;
 import org.elasticsearch.cluster.node.DiscoveryNodes;
@@ -26,9 +26,7 @@ import org.elasticsearch.common.util.set.Sets;
 import org.junit.Before;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
-import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
 
@@ -59,7 +57,7 @@ public class InSyncAllocationIdTests extends ESAllocationTestCase {
                     .settings(settings(Version.CURRENT))
                     .numberOfShards(1)
                     .numberOfReplicas(2)
-                    .putInSyncAllocationIds(0, new HashSet<>(Arrays.asList("x", "y")))
+                    .putInSyncAllocationIds(0, Set.of("x", "y"))
             )
             .build();
         RoutingTable routingTable = RoutingTable.builder().addAsNew(metadata.index("test")).build();
@@ -74,7 +72,7 @@ public class InSyncAllocationIdTests extends ESAllocationTestCase {
         clusterState = allocation.reroute(clusterState, "reroute");
 
         assertThat(clusterState.metadata().index("test").inSyncAllocationIds(0).size(), equalTo(0));
-        assertThat(clusterState.metadata().index("test-old").inSyncAllocationIds(0), equalTo(new HashSet<>(Arrays.asList("x", "y"))));
+        assertThat(clusterState.metadata().index("test-old").inSyncAllocationIds(0), equalTo(Set.of("x", "y")));
 
         logger.info("start primary shard");
         clusterState = startInitializingShardsAndReroute(allocation, clusterState);
@@ -85,7 +83,7 @@ public class InSyncAllocationIdTests extends ESAllocationTestCase {
             shardsWithState(clusterState.getRoutingNodes(), STARTED).get(0).allocationId().getId(),
             equalTo(clusterState.metadata().index("test").inSyncAllocationIds(0).iterator().next())
         );
-        assertThat(clusterState.metadata().index("test-old").inSyncAllocationIds(0), equalTo(new HashSet<>(Arrays.asList("x", "y"))));
+        assertThat(clusterState.metadata().index("test-old").inSyncAllocationIds(0), equalTo(Set.of("x", "y")));
 
         logger.info("start replica shards");
         clusterState = startInitializingShardsAndReroute(allocation, clusterState);
@@ -164,8 +162,16 @@ public class InSyncAllocationIdTests extends ESAllocationTestCase {
         long primaryTerm = clusterState.metadata().index("test").primaryTerm(0);
         clusterState = failedClusterStateTaskExecutor.execute(
             clusterState,
-            Arrays.asList(
-                new FailedShardEntry(shardRoutingTable.shardId(), replicaShard.allocationId().getId(), primaryTerm, "dummy", null, true)
+            List.of(
+                new FailedShardUpdateTask(
+                    shardRoutingTable.shardId(),
+                    replicaShard.allocationId().getId(),
+                    primaryTerm,
+                    "dummy",
+                    null,
+                    true,
+                    null
+                )
             )
         ).resultingState;
 
@@ -188,10 +194,20 @@ public class InSyncAllocationIdTests extends ESAllocationTestCase {
 
         long primaryTerm = clusterState.metadata().index("test").primaryTerm(0);
 
-        List<FailedShardEntry> failureEntries = new ArrayList<>();
-        failureEntries.add(new FailedShardEntry(shardRoutingTable.shardId(), primaryShard.allocationId().getId(), 0L, "dummy", null, true));
+        List<FailedShardUpdateTask> failureEntries = new ArrayList<>();
         failureEntries.add(
-            new FailedShardEntry(shardRoutingTable.shardId(), replicaShard.allocationId().getId(), primaryTerm, "dummy", null, true)
+            new FailedShardUpdateTask(shardRoutingTable.shardId(), primaryShard.allocationId().getId(), 0L, "dummy", null, true, null)
+        );
+        failureEntries.add(
+            new FailedShardUpdateTask(
+                shardRoutingTable.shardId(),
+                replicaShard.allocationId().getId(),
+                primaryTerm,
+                "dummy",
+                null,
+                true,
+                null
+            )
         );
         Collections.shuffle(failureEntries, random());
         logger.info("Failing {}", failureEntries);
@@ -338,8 +354,8 @@ public class InSyncAllocationIdTests extends ESAllocationTestCase {
         logger.info("fail primary shard");
         clusterState = failedClusterStateTaskExecutor.execute(
             clusterState,
-            Collections.singletonList(
-                new FailedShardEntry(shardRoutingTable.shardId(), primaryShard.allocationId().getId(), 0L, "dummy", null, true)
+            List.of(
+                new FailedShardUpdateTask(shardRoutingTable.shardId(), primaryShard.allocationId().getId(), 0L, "dummy", null, true, null)
             )
         ).resultingState;
 
